// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "username",
]
`;

exports[` 2`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "username",
]
`;

exports[` 3`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "username",
]
`;

exports[`## Order APIs # GET /api/users/:userId/review should get all the reviews of a user2 1`] = `
Array [
  "_id",
  "accountStatus",
  "createdAt",
  "emailAddress",
  "followersCount",
  "followingCount",
  "paymentInfo",
  "platform",
  "pushToken",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "shippingAddress",
  "tokens",
  "updatedAt",
  "username",
]
`;

exports[`## Order APIs # GET /api/users/:userId/review should get all the reviews of a user2 2`] = `
Array [
  "_id",
  "accountStatus",
  "createdAt",
  "emailAddress",
  "followersCount",
  "followingCount",
  "paymentInfo",
  "platform",
  "pushToken",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "shippingAddress",
  "tokens",
  "updatedAt",
  "username",
]
`;
